# cftrading-website

./: README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
cftrading/: index.html  index.txt  package-lock.json  package.json  vite.config.ts
cftrading/src/: .env.production  App.tsx  main.tsx
cftrading/src/components/: FooterSection.tsx  Header.module.scss  Header.tsx  header.txt
cftrading/src/components/BreadCumb/: ContactCrumb.tsx
cftrading/src/components/Header/: ContactHeader.tsx  Header.tsx
cftrading/src/components/Main/About/: AboutMain.tsx  VisionMain.tsx
cftrading/src/components/Main/Contact/: AddContactInfo.tsx  BreadCumb.tsx  ContactForm.tsx  ContactMain.tsx  DialogForm.tsx  DisplayTable.tsx  TableForm.tsx  info.txt
cftrading/src/components/Main/Home/: CallMain.tsx  HomeMain.tsx  (+1 more)
cftrading/src/components/Products/: ProductsLayout.tsx
cftrading/src/components/Section/: ContactSection.tsx
cftrading/src/components/Slider/: Slider.tsx
cftrading/src/pages/: About.tsx  Contact.tsx  Contact.txt  Home.tsx  Products.tsx
cftrading/src/types/CftradingWebsite/: Contact.ts  ContactUsSettings.ts
cftrading_website/: hooks.py  modules.txt
cftrading_website/cftrading_website/doctype/contact/: contact.js  contact.json  contact.py  test_contact.py
cftrading_website/cftrading_website/doctype/contact_us_settings/: contact_us_settings.js  contact_us_settings.json  contact_us_settings.py  test_contact_us_settings.py
cftrading_website/public/cftrading/assets/: index-8a381912.js  index-b33d1d76.css
cftrading_website/www/: cftrading.html
(+5 files in other folders)
